test/squareFunctionLhsConst.slq
// args: --run

def f[n:!â„•](const x:ğ”¹^n)mfreeâ‡’x; // TODO (just explicitly synthesize dup/move in semantic)

n:=3;
def main(){
	a:=vector(n,0:ğ”¹);
	b:=dup(a);
	f(b):=a; // error
	return b;
}
